--- a/style.css
+++ b/style.css
@@ -4069,7 +4069,7 @@ footer .buttons img {
     
 }
 
-footer h5 {
+footer h3 {
     color: var(--color-white);
     font-size: 1.5rem;
     font-weight: 400;
